deploy/k8s/tls/dev-localhost-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pyrrhula
  name: pyrrhula-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  tls:
    - hosts:
        - pyrrhula.localhost
      secretName: pyrrhula-web-tls
  rules:
    - host: pyrrhula.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyrrhula-web
                port:
                  number: 80
